sql/sql_lex.cc
@@ -2487,6 +2487,7 @@ void st_select_lex::init_select()
   curr_tvc_name= 0;
   in_tvc= false;
   versioned_tables= 0;
+  is_tvc_wrapper= false;
 }
 
 /*
